--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <title>Kalkulator Tuningu</title>
   <style>
     body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: radial-gradient(circle at top, #0f1c2e, #05080f);
-      color: #ffffff;
+      font-family: 'Segoe UI', Arial, sans-serif;
+      background: radial-gradient(circle at top, #111 0%, #000 60%);
+      color: #fff;
+      padding: 30px 20px;
+      max-width: 780px;
+      margin: auto;
     }
 
     h1 {
@@ -35,12 +37,10 @@
       flex-direction: column;
       justify-content: space-between;
       gap: 10px;
-      background: linear-gradient(145deg, #0e1624, #0a111b);
+      background: linear-gradient(145deg, #1c1c1c, #151515);
       padding: 16px;
       border-radius: 18px;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.7);
-      border: 1px solid #1f3b63;
-    }
+      box-shadow: 0 6px 18px rgba(0,0,0,0.6);
     }
 
     .item span {
@@ -48,19 +48,14 @@
     }
 
     .item button {
-      padding: 10px;
-      border-radius: 12px;
-      border: none;
-      background: linear-gradient(145deg, #f7c948, #d4a017);
-      color: #000;
-      font-weight: bold;
+      padding: 6px 14px;
       cursor: pointer;
-      transition: 0.2s ease;
-    }
-
-    button:hover {
-      transform: scale(1.05);
-      background: linear-gradient(145deg, #ffd95e, #e6b800);
+      border: none;
+      border-radius: 12px;
+      background: #2a2a2a;
+      color: #fff;
+      font-size: 18px;
+      transition: all 0.2s ease;
     }
 
     .item button:hover {
